fix: text-fields with icons sometimes too narrow

--- a/basxbread/static/design/carbon_design/scss/styles.scss
+++ b/basxbread/static/design/carbon_design/scss/styles.scss
@@ -294,3 +294,7 @@ a.bx--header__name {
 .bx--data-table--selected td .bx--btn--ghost:hover {
     background-color: $hover-field;
 }
+
+.bx--text-input__field-wrapper.text-input-with-icon {
+    width: 120%;
+}
